Harden Sonar CSS/JS scanning and land the morning Sonar/handoff sweep.
Enable sonar.maven.scanAll, drop the src/main/resources exclusion so classpath CSS/JS is indexed, and ignore css:S1874 on javadoc.css. Also folds the unstaged Sonar/handoff work (dead javadoc.css, JS ReDoS fixes, RAT ignore for local issue dumps).